--- a/Report Demo ML Microplastic data.Rmd
+++ b/Report Demo ML Microplastic data.Rmd
@@ -98,7 +98,15 @@ comp_filter <- function(data) {
 setwd("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/ATDGCMS")
 
 file_list1 <- list.files(pattern = '*.csv') %>%
-  .[!str_detect(., "Blank")]
+  .[!str_detect(., "Blank")] %>%
+  .[!str_detect(., "USE_08")] %>%
+  .[!str_detect(., "USE_10")] %>%
+  .[!str_detect(., "USE_16")] %>%
+  .[!str_detect(., "USE_17")] %>%
+  .[!str_detect(., "USE_18")] %>%
+  .[!str_detect(., "USE_19")] %>%
+  .[!str_detect(., "USE_20")] %>%
+  .[!str_detect(., "USE_21")]
   # .[!str_detect(., "_USE")] # exclude environmental samples
 
 # Blank samples 
@@ -426,13 +434,89 @@ for (i in 1:length(excel_sheets(path = p))) {
 }
 ```
 
-
 ### Export GC/HPLC/Combined df to excel as input for Python ML pipeline
 ```{r , echo=FALSE, warning = FALSE}
 writexl::write_xlsx(x = gc_list, path = "gc_list_df.xlsx")
 writexl::write_xlsx(x = hplc_list, path = "hplc_list_df.xlsx")
 writexl::write_xlsx(x = gc_hplc_list, path = "gc_hplc_list_df.xlsx")
 ```
+
+### Research Question with Trace metal data
+#### 1. Top10 metal with highest Concen. in each sample? aka. Significant metals to distinguish between each sample
+```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
+p <- "C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Table of product categorization_NewFileName.xlsx"
+
+metal_list <- list()
+
+# Merge Categorization schemes with Trace metal data
+for (i in 1:length(excel_sheets(path = p))) {
+  # Table of categorization
+  sampinfo <- readxl::read_excel(path = p, 
+                                 sheet = excel_sheets(path = p)[i])
+  
+  # joining data frame with sampinfo df
+  dat <- left_join(x = metal, 
+                    y = sampinfo, 
+                    by = 'File')
+  
+  metal_list[[i]] <- dat %>% 
+    select(., -c(File, Type)) %>%
+    relocate(NewFile, Suspected_Polymer, Category, Subcategory, .before = 1) %>%
+    pivot_longer(., cols = 5:ncol(.), names_to = "Metal_component", values_to = "Values")
+}
+
+newmetal <- metal %>% column_to_rownames(., var = "File")
+
+# Replace all NA in data frame with 0
+newmetal[is.na(newmetal)] <- 0
+
+# Extract Top 10 metal with highest concen for each sample
+top10_metal <- list()
+for (row in 1:nrow(newmetal)) {
+  top10_metal[[row]] <- colnames(newmetal)[order(as.numeric(newmetal[row,]), decreasing = TRUE)[1:10]]
+}
+
+# top10_metal <- bind_cols(top10_metal)
+# colnames(top10_metal) <- rownames(newmetal)
+top10_list <- list()
+i <- 1
+for (file in unique(metal_list[[1]]$NewFile)) {
+  top10_list[[i]] <- metal_list[[1]] %>% filter(., NewFile %in% file) %>% filter(., Metal_component %in% top10_metal[[i]])
+  i <- i + 1
+}
+
+top10_plot <- bind_rows(top10_list)
+
+### Stacked bar plot of values of  Top 10 trace metal for each metal data sample (x-axis: sample name; y-axis: metal values) --------------------------------------
+
+# data_summary <- top10_plot %>%
+#   group_by(NewFile, Metal_component) %>%
+#   summarise(mean = mean(Values), sd = sd(Values), .groups = 'drop')
+
+ggplot(data = top10_plot, aes(x = NewFile, y = Values, fill = Metal_component)) +
+  geom_bar(stat = "identity") +
+  # geom_errorbar(data = data_summary, aes(x = NewFile, ymin = mean - sd, 
+  #                                        ymax = mean + sd, group = Metal_component), 
+  #               position = position_dodge(width = 0.9), width = 0.25) +
+  labs(title = "Stacked Bar Plot", x = "Sample", y = "Value",
+       fill = "Top 10 trace metal components") +
+  theme_minimal(base_size = 20) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+
+
+### Combining Trace Metal data with GC&HPLCdata - TBA
+```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
+# MAtch sample name with combined GC/HPLC
+for (i in gc_hplc_list) {
+  full_join(x = metal_list[[i]],
+            y = gc_hplc_list[[i]] %>% 
+              select(., -c(m.z, RT)), by = c("Suspected_Polymer", "Category", "Subcategory"))
+}
+```
+
+
 
 ### ATDGCMS - Summary of Percent_Area in each sample of merge_df1 to know how much Percent_Area we lost when we force the compounds to appear in at least 2 product categories
 
